welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: ';' expected but '=' found.
	vuBiscuit : Boolean = false
                            ^Program:4: error: '<-' expected but ')' found.
	for ( i -> 1 to 6 ) {
                          ^Program:10: error: illegal start of simple expression
} else {
^Program:10: error: ';' expected but 'else' found.
} else {
  ^